# inkBench

./: Cargo.toml  README.md
apps/: next.config.ts  package.json  pnpm-lock.yaml
apps/app/: layout.tsx  page.tsx
apps/app/dashboard/: page.tsx
apps/components/: hero.tsx
apps/components/dashboard/: configuration-panel.tsx  function-results-table.tsx  gas-usage-chart.tsx  historical-results.tsx  stats-cards.tsx
contracts/compiled/: ink.polkavm  sol.polkavm
contracts/ink/: Cargo.toml  incrementer.rs
contracts/solidity/: Incrementer.sol
src/: bench.rs  lib.rs  runtime.rs
