[package]
name = "revive-bench"
version = "0.1.0"
edition = "2024"

[features]
std = ["polkadot-sdk/std"]

[dependencies]
codec = { version = "3.7.5", default-features = false, package = "parity-scale-codec" }
scale-info = { version = "2.11.6", default-features = false }

polkadot-sdk.version = "2507.1.0"
polkadot-sdk.features = [
    "experimental",
    "runtime",
    "polkadot-runtime-common",
    "pallet-revive",
    "pallet-revive-uapi",
    "pallet-balances",
    "pallet-timestamp"
]

anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"

[[bin]]
name = "revive-bench"  
path = "src/bin/main.rs"

