[package]
name = "incrementer"
authors = ["Mintu <hello@mintu.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
ink = { git = "https://github.com/use-ink/ink.git", tag = "v6.0.0-alpha.3", default-features = false, features = ["unstable-hostfn"] }

[lib]
path = "incrementer.rs"

[features]
default = ["std"]
std = [
    "ink/std",
]
ink-as-dependency = []
e2e-tests = []
[package.metadata.ink-lang]
abi = "ink" 